completed mobile view

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <main>
       <div class="flex-card">
-        <img src="/images/drawers.jpg" alt="green drawer and surroundings" class="drawers">
+        <img src="./images/drawers.jpg" alt="green drawer and surroundings" class="drawers">
         <section class="container">
           <h1 class="main-text">
             Shift the overall look and feel by adding these wonderful 
@@ -31,7 +31,7 @@
         </section>
         <section class="flex-container color--blue">
           <section class="info-left visible--hidden">
-            <img src="/images/avatar-michelle.jpg" alt="Michelle's photo" class="head">
+            <img src="./images/avatar-michelle.jpg" alt="Michelle's photo" class="head">
             <div class="info-text">
               <p class="name">Michelle Appleton</p>
               <p class="date">28 Jun 2020</p>
@@ -39,9 +39,9 @@
           </section>
           <section class="sns-container visible--hidden">
             <p class="share-text">Share</p>
-            <img src="/images/icon-facebook.svg" alt="facebook icon" class="fb">
-            <img src="/images/icon-twitter.svg" alt="twitter icon" class="twitter">
-            <img src="/images/icon-pinterest.svg" alt="pinterest icon" class="pinterest">
+            <img src="./images/icon-facebook.svg" alt="facebook icon" class="fb">
+            <img src="./images/icon-twitter.svg" alt="twitter icon" class="twitter">
+            <img src="./images/icon-pinterest.svg" alt="pinterest icon" class="pinterest">
           </section>
           <div class="share-icon-circle btn-color">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
